# steam-game-idler

./: .eslintrc.json  .gitignore  FormIdler.resx  Program.cs  README.md  changelog.md  electron-builder.yml  eslint.config.js  idler.csproj  index.js  latest.json  next.config.mjs  package-lock.json  package.json  postbuild.config.js  splash.txt  steam-game-idler.sh  tailwind.config.js
.github/: FUNDING.yml
achievement-unlocker-chsarp/: AchievementUnlocker.csproj  Program.cs
cli/: check-for-updates.js  checkForUpdated.js  client-login.js  create-config.js  create-empty-config.js  log-name-or-id.js  login-to-steam.js  pre-login-check.js  set-user-persona.js  start-web-server.js  utils.js
components/: Achievements.jsx  ChangelogModal.jsx  ChangelogModal.module.css  Dashboard.jsx  ExtLink.jsx  FreeGamesToast.jsx  GameList.jsx  GamesList.jsx  GridView.jsx  Header.jsx  Layout.jsx  ListView.jsx  Loader.jsx  MainPage.jsx  Private.jsx  SearchBar.jsx  Setup.jsx  SetupModal.jsx  SideBar.jsx  Sparkles.jsx  Status.jsx  TitleBar.jsx  UpdateModal.jsx  UpdateScreen.jsx  UpdateToast.jsx  Window.jsx
idler-csharp/: FormIdler.cs  FormIdler.resx  idler.csproj
main/: background.ts  preload.ts
pages/: _app.jsx  index.jsx
prompts/: delete-login-details.js  game-ids.js  login-with-config.js  pre-run-check.js  set-preferred.js  startup.js  stop-or-continue.js  user-config.js  user-login.js  webui-config.js
renderer/: next.config.js  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/lib/: readme.txt
src-tauri/src/: main.rs  mongodb.rs  requests.rs  tasks.rs  utils.rs
(+112 files in other folders)
