[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = [ "window-set-position", "window-set-size", "process-relaunch", "shell-open", "fs-all", "path-all", "dialog-ask", "updater", "window-start-dragging", "window-show", "window-maximize", "window-hide", "window-close", "window-unminimize", "window-unmaximize", "window-minimize"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
dotenvs = "0.1.0"
tokio = { version = "1", features = ["full"] }
regex = "1.7.1"
scraper = "0.20.0"
select = "0.6.0"
lazy_static = "1.5.0"
mongodb = "3.1.0"
window-shadows = "0.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
